# speed-knowledge-server

./: .cursorrules  .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  backup-data.sh  docker-compose.example.yml  docker-compose.yml  migrate-data.sh  restore-data.sh  speed-knowledge-init.sql  speed-knowledge-schema.sql  speed-knowledge.sql
python-fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_tables.py  docker-compose.yml  langgraph.json  migration_rename_name_to_nickname.sql  pyproject.toml  requirements-dev.txt  requirements.txt
python-fastapi/.cursor/rules/: sqlalchemy-enum-query.mdc
python-fastapi/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
python-fastapi/alembic/: env.py
python-fastapi/alembic/versions/: 07211956930e_新增消息通知表.py  098c6380dd8d_调整_cover_url_为一个对象.py  0a8ce53073fd_同步最新的一些model.py  15b23446847b_同步role字段类型.py  25318514dd28_user表添加deletd_at字段.py  2dd360aa929c_外键还原.py  2eba7055c978_调整知识库部分字段名.py  3a938e67471c_增加知识库关联关系.py  3f02410d5391_新增机器人会话表_和消息表.py  4528918fc7c5_创建知识库分组中间表.py  45b6ed0a98f6_node表字段同步.py  4b86730a8666_创建知识库日统计表_收藏表_更新一些表字段.py  56b658751814_同步model.py  5984b406803c_添加知识库公开密码配置_调整一些表字段.py  62018c92acf7_增加空间表和团队表_调整知识库一些配置.py  64ab8214d15b_文档历史记录表外键调整.py  6f0d8b9a19e6_增加知识库分组表.py  7368c3a79257_同步协同人员模型_创建关联user.py  7b2be82ec7ea_消息表结构调整.py  7c28ef448f94_去除知识库base表的group_id外键.py  7dc49ca1ce94_添加编辑和浏览记录表_混入deleted_at用于软删除.py  83b310681c38_同步生成附件表.py  85ad41fce17a_调整通知表的字段.py  9582d8948fec_修改文档模型_增加外键.py  981f9480e6ef_新增常用知识库pin表.py  9c74ee41b8ab_同步协同者相关model.py  9e90556dfca4_调整通知表部分字段.py  a5d2bbda09b7_外键删除.py  aa73993d052d_创建mq同步表.py  ab2184a104fa_调整邀请表相关字段.py  b1714a76f3de_调整知识库icon字段.py  b52010830d7e_调整userid的类型.py  bda97ce03d8d_mq同步表增加知识库id.py  c113f7f65ca4_创建知识库日统计表.py  c709cdb31a7d_增加node_json字段.py  c82e405e3a65_change_knowledge_id_to_uuid.py  c84d2a70587d_新增消息表字段.py  c912439146a8_外键增加联动删除.py  cc0c736dec15_调整filetype长度.py  cf85bfd43b0e_同步model到数据库.py  (+10 more)
python-fastapi/app/: __init__.py  main.py
python-fastapi/app/ai/: __init__.py  config.py
python-fastapi/app/api/: __init__.py
python-fastapi/app/common/: enums.py  pagination.py  simpleImageCaptcha.py  sorting.py  utils.py  validator.py
python-fastapi/app/core/: __init__.py  config.py  deps.py  deps_backup.py  minio_client.py  mixins.py  redis_client.py  security.py  security1.py  template.py
python-fastapi/app/db/: __init__.py  base.py  session.py
python-fastapi/app/messaging/: handlers.py  rabbitmq_consumer.py
python-fastapi/app/models/: __init__.py  attachment.py  chat_message.py  chat_session.py  collaborator.py  collect.py  document.py  document_edit_history.py  document_node.py  document_view_history.py  invitation.py  knowledge.py  knowledge_collaborator.py  knowledge_common_pin.py  knowledge_daily_stats.py  knowledge_group.py  knowledge_group_relation.py  knowledge_invitation.py  notification.py  permission_ability.py  permission_group.py  resource_access_setting.py  space.py  space_dept.py  space_member.py  team.py  team_member.py  user.py  vector_sync.py
python-fastapi/app/schemas/: __init__.py  ai.py  attachment.py  chat_message.py  chat_session.py  collaborator.py  collect.py  document.py  document_history.py  document_node.py  document_view_history.py  internal.py  invitation.py  knowledge.py  knowledge_collaborator.py  knowledge_common_pin.py  knowledge_daily_stats.py  knowledge_group.py  knowledge_group_relation.py  knowledge_invitation.py  notification.py  permission_ability.py  permission_group.py  query.py  resource_access.py  response.py  search.py  space.py  space_member.py  team.py  team_member.py  user.py
python-fastapi/app/script/: add_ability.py  add_export_ability.py  add_group_relation.py
python-fastapi/app_basic/: main.py
(+210 files in other folders)
