[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# 忽略第三方库的类型检查
[[tool.mypy.overrides]]
module = ["redis.*", "fastapi.*", "sqlalchemy.*", "captcha.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

[project]
name = "speed-knowledge-server"
version = "0.1.0"
description = "Speed Knowledge Server (FastAPI)"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.109.0",
  "uvicorn[standard]==0.27.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.7.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.1",
  "httpx==0.27.2",
  "logging==0.4.9.6",
  # "psycopg2-binary==2.9.9",  # kept commented as in requirements.txt
  "pymysql==1.1.0",
  "python-jose[cryptography]==3.3.0",
  "passlib==1.7.4",
  "bcrypt>=3.2.0,<4.0.0",
  "python-multipart==0.0.6",
  "jinja2==3.1.2",
  "email-validator==2.1.0",
  "python-dotenv==1.0.0",
  "captcha==0.5.0",
  "redis==5.0.1",
  "minio==7.2.18",
  "apscheduler==3.10.4",
  "volcengine-python-sdk==5.0.6",
  "langchain-community>=0.3.0",
  "langchain-core>=0.3.0",
  "dashscope>=1.25.12",
]
